--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -5,3 +5,24 @@
   To use Glyphicons sprites instead of Font Awesome, replace with "require twitter-bootstrap-static/sprites"
   =require twitter-bootstrap-static/fontawesome
   */
+
+  body {
+  	padding: 10px;
+    background-color: #F5F5F5;
+  }
+  
+  img {
+    width: 555px;
+  	margin-bottom: 10px;
+  }
+
+  .photo {
+   
+    background-color: white;
+    padding: 14px 0;
+  }
+
+.feed {
+	width: 555px;
+  	margin: 10px 0 40px 0;
+}
