--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,4 +1,5 @@
 <div class="col-md-6 col-md-offset-3 text-center">
+<div class="feed">
 <h1>BruGram</h1>
 <h3>
 	<%= link_to 'Add a Memory', new_photo_path %>
@@ -10,10 +11,10 @@
 	<%= image_tag photo.image %>
 	<br>
 
-	
+	<p> <%= photo.likes %> likes</p>
 	<p><%= photo.caption %></p>
 	<%= link_to 'show', photo %>
 	</div>
 <% end %>
 </div>
-
+</div>
