--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,6 +1,7 @@
 <div class="col-md-8 col-md-offset-2">
 
 <h1><%= @photo.user.email %></h1>
+<p>at <%= @photo.created_at %></p>
 
 <img src="<%= @photo.image %>">
 <br>
@@ -24,7 +25,7 @@
 <h3>Comments</h3>
 <% @photo.comments.each do |cm| %>
 	<p>
-	<%= cm.text %>
+	<%= cm.user %>: <%= cm.text %>
 	</p>
 <% end %>
 
