basic functionalities and styling

--- a/app/views/layouts/_nav.erb
+++ b/app/views/layouts/_nav.erb
@@ -1,3 +1,5 @@
+<class="title"><%= link_to "InstaBruGram", photos_path %> </class="title">
+
 <% if user_signed_in? %>
   Logged in as <strong><%= current_user.email %></strong>.
   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
