--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,7 +1,11 @@
 <div class="col-md-8 col-md-offset-2">
+
+<div class="title-container">
 <h1>Edit the photo</h1>
-<p>You can't add filters, however</p>
+</div>
 
 <%= render 'form' %>
+<div class="nav">
 <%= link_to 'back', photo_path %>
+</div>
 </div>
