--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,7 +1,13 @@
 <div class="col-md-8 col-md-offset-2">
+
+<div class="title-container">
 <h1>New Memory</h1>
+</div>
 
 <%= render 'form' %>
 
+<div class="nav">
 <%= link_to 'back', photos_path %>
+</div>
+
 </div>
