--- a/app/views/photos/myphotos.html.erb
+++ b/app/views/photos/myphotos.html.erb
@@ -2,7 +2,7 @@
 <div class="my-feed text-center">
 
 <div class="title-container">
-<h1 class="title">My Photos</h1>
+<h1>My Photos</h1>
 </div>
 
 <% @photos.each do |photo| %>
