--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -6,8 +6,6 @@
 
 <%= render 'form' %>
 
-<div class="nav">
-<%= link_to 'back', photos_path %>
-</div>
+<%= link_to 'back', photos_path, class: "nav" %>
 
 </div>
